// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Finished /> Basic Init 1`] = `
<span
  title="2018-11-26 15:09:01"
>
  2 minutes ago
</span>
`;

exports[`<Finished /> Finished with icon 1`] = `
<span
  title="2018-11-26 15:09:01"
>
  <svg
    aria-hidden="true"
    className="svg-inline--fa fa-calendar icon-addon-right"
    data-icon="calendar"
    data-prefix="fas"
    focusable="false"
    role="img"
    style={Object {}}
    viewBox="0 0 448 512"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="M96 32C96 14.33 110.3 0 128 0C145.7 0 160 14.33 160 32V64H288V32C288 14.33 302.3 0 320 0C337.7 0 352 14.33 352 32V64H400C426.5 64 448 85.49 448 112V160H0V112C0 85.49 21.49 64 48 64H96V32zM448 464C448 490.5 426.5 512 400 512H48C21.49 512 0 490.5 0 464V192H448V464z"
      fill="currentColor"
      style={Object {}}
    />
  </svg>
  2 minutes ago
</span>
`;

exports[`<Finished /> No datetime provided 1`] = `
<span
  title=""
>
  N/A
</span>
`;
